# ZenoMart

./: .gitignore  README.md
backend/: .env  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 41a21ec4e8a1_create_product_and_category_table.py  b924f3114646_create_users_and_refresh_tokens_table.py
backend/app/: main.py
backend/app/account/: dependency.py  models.py  routers.py  schemas.py  services.py  utils.py
backend/app/db/: base.py  config.py
backend/app/product/: models.py  schemas.py
backend/app/product/routers/: category.py  product.py
backend/app/product/services/: category_service.py  product_service.py
backend/app/product/utils/: product_utils.py
frontend/: package-lock.json  package.json
frontend/app/: layout.js  page.jsx
frontend/app/product/: page.jsx
frontend/app/product/[slug]/: page.jsx
frontend/app/unauthorized/: page.jsx
frontend/components/: AdminOnly.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  ProductCard.jsx  ProtectedRoute.jsx
frontend/context/: AuthContext.jsx
frontend/hooks/: useHasMounted.js  useProductByCategory.js  useProductHook.js
frontend/services/: ProductService.js
frontend/utils/: axiosInstance.js
