[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.16.5",
    "cryptography>=46.0.1",
    "fastapi[standard]>=0.117.1",
    "passlib[bcrypt]>=1.7.4",
    "python-decouple>=3.8",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.43",
]
